PDF navigation mobile fix

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -322,6 +322,13 @@ textarea {
 	margin-top: 5px;
 }	
 
+.textLayer {
+    pointer-events: none;
+}
+
+.ant-modal {
+    pointer-events: auto;
+}
 
 /* Basic */
 
